er-failover-dual-hub/route-dumps/20260915-013512-baseline/gcp-router-status.json
{
  "bestRoutes": [
    {
      "asPaths": [
        {
          "asLists": [
            65001,
            12076
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:32:56.151-05:00",
      "destRange": "10.20.0.0/24",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeType": "BGP"
    },
    {
      "asPaths": [
        {
          "asLists": [
            65001
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:17:13.287-05:00",
      "destRange": "169.254.172.16/30",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeType": "BGP"
    },
    {
      "asPaths": [
        {
          "asLists": [
            65001
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:17:13.287-05:00",
      "destRange": "169.254.171.248/30",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeType": "BGP"
    },
    {
      "asPaths": [
        {
          "asLists": [
            65001,
            12076
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:32:56.151-05:00",
      "destRange": "10.10.0.0/24",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeType": "BGP"
    },
    {
      "asPaths": [
        {
          "asLists": [
            65001,
            12076
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:32:56.151-05:00",
      "destRange": "10.1.0.0/23",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeType": "BGP"
    }
  ],
  "bestRoutesForRouter": [
    {
      "asPaths": [
        {
          "asLists": [
            65001,
            12076
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:32:56.151-05:00",
      "destRange": "10.1.0.0/23",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeStatus": "ACTIVE",
      "routeType": "BGP"
    },
    {
      "asPaths": [
        {
          "asLists": [
            65001,
            12076
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:32:56.151-05:00",
      "destRange": "10.10.0.0/24",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeStatus": "ACTIVE",
      "routeType": "BGP"
    },
    {
      "asPaths": [
        {
          "asLists": [
            65001,
            12076
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:32:56.151-05:00",
      "destRange": "10.20.0.0/24",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeStatus": "ACTIVE",
      "routeType": "BGP"
    },
    {
      "asPaths": [
        {
          "asLists": [
            65001
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:17:13.287-05:00",
      "destRange": "169.254.40.248/29",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeStatus": "ACTIVE",
      "routeType": "BGP"
    },
    {
      "asPaths": [
        {
          "asLists": [
            65001
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:17:13.287-05:00",
      "destRange": "169.254.171.248/30",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeStatus": "ACTIVE",
      "routeType": "BGP"
    },
    {
      "asPaths": [
        {
          "asLists": [
            65001
          ],
          "pathSegmentType": "AS_SEQUENCE"
        }
      ],
      "creationTimestamp": "2026-09-14T20:17:13.287-05:00",
      "destRange": "169.254.172.16/30",
      "kind": "compute#route",
      "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
      "nextHopIp": "169.254.40.250",
      "nextHopOrigin": "INCOMPLETE",
      "priority": 0,
      "routeStatus": "ACTIVE",
      "routeType": "BGP"
    }
  ],
  "bgpPeerStatus": [
    {
      "advertisedRoutes": [
        {
          "destRange": "10.0.0.0/8",
          "kind": "compute#route",
          "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
          "nextHopIp": "169.254.40.249",
          "nextHopOrigin": "INCOMPLETE",
          "priority": 100,
          "routeType": "BGP"
        },
        {
          "destRange": "192.168.100.0/24",
          "kind": "compute#route",
          "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
          "nextHopIp": "169.254.40.249",
          "nextHopOrigin": "INCOMPLETE",
          "priority": 100,
          "routeType": "BGP"
        }
      ],
      "enableIpv4": true,
      "enableIpv6": false,
      "ipAddress": "169.254.40.249",
      "md5AuthEnabled": false,
      "name": "auto-ia-bgp-erfo-onprem-att-13e3a477539dc38",
      "numLearnedRoutes": 6,
      "peerIpAddress": "169.254.40.250",
      "state": "Established",
      "status": "UP",
      "uptime": "18 minutes, 39 seconds",
      "uptimeSeconds": "1119"
    }
  ],
  "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem"
}
