er-failover-dual-hub/route-dumps/20260915-013512-baseline/gcp-vpc-routes.json
[
  {
    "creationTimestamp": "2026-09-14T19:38:36.259-05:00",
    "description": "Default route to the Internet.",
    "destRange": "0.0.0.0/0",
    "id": "4474005063748365667",
    "kind": "compute#route",
    "name": "default-route-6f14f6729c6ec4ea",
    "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
    "nextHopGateway": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/gateways/default-internet-gateway",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/routes/default-route-6f14f6729c6ec4ea"
  },
  {
    "creationTimestamp": "2026-09-14T19:38:50.754-05:00",
    "description": "Default local route to the subnetwork 192.168.100.0/24.",
    "destRange": "192.168.100.0/24",
    "id": "6487094185714593141",
    "kind": "compute#route",
    "name": "default-route-r-6127a887c435876a",
    "network": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/networks/erfo-onprem",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/angular-expanse-327722/global/routes/default-route-r-6127a887c435876a"
  }
]
